--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "scripts": {
     "start": "node server/index.js",
-    "backend": "nodemon server/index.js"
+    "backend": "nodemon server/index.js",
+    "frontend": "npm run start --prefix client",
+    "dev": "concurrently \" npm run backend\" \"npm run start --prefix client\""
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,7 @@
   "homepage": "https://github.com/Hyeun9991/shopping-mall-01#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "concurrently": "^8.0.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -31,6 +34,7 @@
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.2.11",
+    "http-proxy-middleware": "^2.0.6",
     "nodemon": "^2.0.22"
   }
 }
